manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trumpet
  labels:
    app: trumpet
spec:
  rules:
    - host: trumpet.example.com
      http:
        paths:
          - backend:
              serviceName: trumpet
              servicePort: 8080
            path: /
            pathType: Prefix
